# k2-java-rd-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/designs/: 2026-04-25-k2-java-rd-demo.md
docs/evaluations/: 2026-05-01-public-methodology-report.md  2026-05-02-blog-basis.md  2026-05-02-feature-development-validation-strategy.md  2026-05-02-patch-generation-benchmark.md  2026-05-02-question-catalog.md  2026-05-03-customer-value-guardrail-demo.md  2026-05-03-k2-answer-style-tuning.md  (+2 more)
scripts/: compare_llm_judges.py  k2_java_rd_mcp_server.py  merge_patch_generation_scorecards.py  reload_live_demo.py  run_claim_grade_patch_benchmark.py  run_codex_k2_comparison.py  run_codex_k2_real_mcp_comparison.py  run_eval_extension_arms.py  run_llm_judge_comparison.py  run_patch_generation_benchmark.py  summarize_benchmark_question_stats.py  verify_patch_generation_scorecard.py
tests/: __init__.py  test_agent_specs.py  test_assets.py  test_benchmark_cases.py  test_claim_grade_patch_runner.py  test_cli.py  test_codex_comparison.py  test_compare_llm_judges.py  test_customer_value.py  test_demo_docs.py  test_docs_harvest.py  test_eval_cases.py  test_evaluation.py  test_filters_chunking.py  test_k2_config.py  test_k2_mcp_server.py  test_live_agents.py  test_live_client.py  test_live_eval.py  test_live_k2.py  test_llm_judge.py  test_manifest.py  test_mcp_contract.py  test_metadata.py  test_patch_benchmark.py  test_patch_generation_runner.py  test_question_stats.py  test_repo_checkout.py  test_source_catalog.py  test_subprocess_env.py
(+779 files in other folders)
