[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "k2-java-rd-demo"
version = "0.1.0"
description = "K2 customer demo for Java R&D coding-agent context"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Knowledge2" }]
dependencies = []

[project.optional-dependencies]
live = ["knowledge2==0.4.0"]
tavily = ["tavily-python>=0.7.23"]
dev = ["ruff>=0.5.0", "pytest>=8.0", "pytest-timeout>=2.3"]

[project.scripts]
k2-java-rd-demo = "k2_java_rd_demo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: requires live K2 API credentials (skip in CI)"]
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py311"
